--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8" />
 
-        <title>give your page a title</title>
+        <title>Where are we going?</title>
 
         <!-- Leaflet links -->
 
